# pecos

./: CMakeLists.txt  README.md  benchmark.cpp  datasets.json  gauntlet.cpp  gauntlet.json  macros.json
pecos/core/: base.py
pecos/core/xmc/: inference.hpp
